

April 2004 : make teh documentation look much nicer by using doxygen
     markup correctly.

June 27 2003 : rename many files and functions to use qof prefix, and 
     to use a gnome style naming convention.

June 16 2003 : Initial split-off from gnucash