@@ -4,3 +4,5 @@ Rob Browning
 Bill Gribble
 Dave Peticolas
 Linas Vepstas <linas@linas.org>
+Neil Williams <linux@codehelp.co.uk>
+
